<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aula51.bqtoguide.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TituloMain"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/title"
        android:layout_marginTop="50dp">
        <Button
            android:text="@string/parques_naturales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_margin="5dp"
            android:textColor="@color/white"/>
        <Button
            android:text="@string/parques_artificiales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_margin="5dp"
            android:textColor="@color/white"/>
        <Button
            android:text="@string/centros_comerciales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_margin="5dp"
            android:textColor="@color/white"/>
        <Button
            android:text="@string/plazas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_margin="5dp"
            android:textColor="@color/white"/>
        <Button
            android:text="@string/restaurantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_margin="5dp"
            android:textColor="@color/white"/>
        <Button
            android:text="@string/iglesias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_margin="5dp"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>
